--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Page Not Found"
+title: "404 - Page Not Found"
 description: "Page not found. Your pixels are in another canvas."
 sitemap: false
 search_omit: true
